<resources>
    <string name="app_name">MIREAScanner</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">No account? Register.</string>
    <string name="error_something_went_wrong">Something went wrong!</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Sign up</string>
    <string name="error_passwords_not_the_same">Passwords not the same</string>
    <string name="error_empty_field">This field must not be empty</string>
    <string name="error_incorrect_email">Incorrect Email</string>
    <string name="title_sign_in">Sign In</string>
    <string name="text_dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="error_password_too_short">Password too short</string>
    <string name="error_not_contanis_letters_or_digits">Password must contains letters and digits</string>
    <string name="error_not_contains_upper_or_lower_letters">Password must contains upper and lower letters</string>
    <string name="error_email_already_used">User with this email already exists</string>
    <string name="error_invalid_credentials">Email or Password incorrect</string>
    <string name="text_notifications_are_off">You offed notifications</string>
    <string name="text_on">On</string>
    <string name="allow_notifications">Please allow notifications</string>
    <string name="allow_notifications_desc">This app requires permission to send notifications. Allow
        notifications.
    </string>
    <string name="allow_notifications_desc_last">This app requires permission to send notifications.
        Open settings for allowing?
    </string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="open">Open</string>
    <string name="title_scans">Scans</string>
    <string name="text_scanning">Scanning</string>
    <string name="title_hosts">Hosts</string>
    <string name="text_there_is_no_hosts">There is no hosts</string>
    <string name="manage_ips">Manage ips</string>
    <string name="ip" translatable="false">IP</string>
    <string name="done">Done</string>
    <string name="title_input_company_url">Input company host</string>
    <string name="hint_company">Company host</string>
    <string name="services">Services</string>
    <string name="text_services_not_found">Services not found</string>
    <string name="ip_error">Input IP in simple format or CIDR, or range with dash</string>
    <string name="title_vulnerabilities">Vulnerabilities</string>
    <string name="text_product">Product</string>
    <string name="text_description">Description</string>
    <string name="text_base_score">Base score</string>
    <string name="text_refs">References</string>
</resources>