<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.auth.presentation.sign_up.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="@string/title_sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clipToPadding="false"
            android:hint="@string/hint_email"
            android:padding="0dp"
            app:boxBackgroundColor="@color/md_theme_surfaceContainerHighest_highContrast"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <EditText
                android:id="@+id/et_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clipToPadding="false"
            android:hint="@string/hint_password"
            android:padding="0dp"
            app:boxBackgroundColor="@color/md_theme_surfaceContainerHighest_highContrast"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:autofillHints=""
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_registration_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clipToPadding="false"
            android:hint="@string/hint_repeat_password"
            android:padding="0dp"
            app:boxBackgroundColor="@color/md_theme_surfaceContainerHighest_highContrast"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_registration_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:autofillHints=""
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_sign_up"
            android:textSize="18sp" />
    </LinearLayout>


</FrameLayout>